[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/nine-patch-with-header.png" type="Texture" id=1]
[ext_resource path="res://scenes/trade_screen/trade_item.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/button1-pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/button1.png" type="Texture" id=4]
[ext_resource path="res://scenes/trade_screen/trade_screen.gd" type="Script" id=5]
[ext_resource path="res://assets/music/music-ambient-02.wav" type="AudioStream" id=6]

[node name="Trade" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -208, 441 )
mouse_filter = 1
script = ExtResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 360.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
region_rect = Rect2( 0.187962, 97.5782, 320.191, 139.108 )
patch_margin_left = 40
patch_margin_top = 92
patch_margin_right = 43
patch_margin_bottom = 114

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 33.0
margin_right = -32.0
margin_bottom = -32.0
mouse_filter = 2

[node name="MainVBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_right = 296.0
margin_bottom = 655.0
mouse_filter = 2

[node name="PlanetRow" type="HBoxContainer" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_right = 296.0
margin_bottom = 32.0

[node name="PlanetNameLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/PlanetRow"]
margin_right = 42.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Funds:"
valign = 1

[node name="FundsRow" type="HBoxContainer" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 36.0
margin_right = 296.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/FundsRow"]
margin_right = 42.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Funds:"
valign = 1

[node name="FundsLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/FundsRow"]
margin_left = 46.0
margin_right = 86.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "100 cr"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 72.0
margin_right = 296.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 32 )

[node name="ProductLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/HBoxContainer"]
margin_right = 71.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Product"
valign = 1

[node name="PriceLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/HBoxContainer"]
margin_left = 75.0
margin_right = 146.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Price"
align = 1
valign = 1

[node name="QtyLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 221.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Qty"
align = 1
valign = 1

[node name="HoldLabel" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/HBoxContainer"]
margin_left = 225.0
margin_right = 296.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Hold"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 108.0
margin_right = 296.0
margin_bottom = 587.0
mouse_filter = 1
size_flags_vertical = 3

[node name="ProductsVBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/MainVBoxContainer/ScrollContainer"]
margin_right = 296.0
margin_bottom = 479.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TradeItem2" parent="NinePatchRect/MarginContainer/MainVBoxContainer/ScrollContainer/ProductsVBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 296.0
product = "Silver"

[node name="TradeItem1" parent="NinePatchRect/MarginContainer/MainVBoxContainer/ScrollContainer/ProductsVBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 36.0
margin_right = 296.0
margin_bottom = 68.0

[node name="PlayTextureButton" type="TextureButton" parent="NinePatchRect/MarginContainer/MainVBoxContainer"]
margin_top = 591.0
margin_right = 296.0
margin_bottom = 655.0
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/MainVBoxContainer/PlayTextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Leave the planet"
align = 1
valign = 1
uppercase = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="trade_item_buy" from="NinePatchRect/MarginContainer/MainVBoxContainer/ScrollContainer/ProductsVBoxContainer/TradeItem2" to="." method="_on_trade_item_buy"]
[connection signal="trade_item_sell" from="NinePatchRect/MarginContainer/MainVBoxContainer/ScrollContainer/ProductsVBoxContainer/TradeItem2" to="." method="_on_trade_item_sell"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/MainVBoxContainer/PlayTextureButton" to="." method="_on_PlayTextureButton_pressed"]
